@@ -1,3 +1,11 @@
+2013-03-01  Michael Albinus  <michael.albinus@gmx.de>
+
+	* net/tramp-adb.el (tramp-adb-prompt): Extend regexp.
+	(tramp-adb-handle-process-file): Remove superfluous setting.
+	(tramp-adb-command-exit-status): Handle case that COMMAND is nil.
+	(tramp-adb-barf-unless-okay): Use `tramp-adb-command-exit-status'.
+	(tramp-adb-maybe-open-connection): Apply "su" if user is defined.
+
 2013-03-01  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* textmodes/ispell.el: Fix nitpicks and byte-compiler warnings.
